# visiont-pytorch

./: .dockerignore  Dockerfile  LICENSE.md  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
visiont/: __main__.py  datasets.py  models.py  transforms.py  visiont.py
visiont/scripts/: __main__.py  data_gen.py  train.py  val.py
