[tool.poetry]
name = "visiont"
version = "0.1.0"
description = "Vision Transformer in PyTorch"
authors = ["Daniel J. Hofmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
einops = "^0.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
visiont = "visiont.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
